# project_smartfly

./: LICENSE
project_smartfly/: .env  .gitignore  BT-CONNECTION.MD  app.py  bind_bluetooth.sh  configs.py  main.py  package-lock.json  package.json  pyproject.toml  test_controller.py  token.txt  tools.py  vision.py  web_server.py
project_smartfly/extras/: app.py  main.py  tools.py
project_smartfly/src/: crew.py
project_smartfly/src/config/: agents.yaml  tasks.yaml
project_smartfly/src/tools/: remote.py  vision.py
project_smartfly/src/utils/: configs.py  logger.py  model.py
